--- a/celsus.vcxproj
+++ b/celsus.vcxproj
@@ -87,10 +87,13 @@
     <ClCompile Include="celsus\ChunkIO.cpp" />
     <ClCompile Include="celsus\DX10Utils.cpp" />
     <ClCompile Include="celsus\DX11Utils.cpp" />
+    <ClCompile Include="celsus\effect_wrapper.cpp" />
+    <ClCompile Include="celsus\graphics.cpp" />
     <ClCompile Include="celsus\Logger.cpp" />
     <ClCompile Include="celsus\MemoryMappedFile.cpp" />
     <ClCompile Include="celsus\path_utils.cpp" />
     <ClCompile Include="celsus\Profiler.cpp" />
+    <ClCompile Include="celsus\section_reader.cpp" />
     <ClCompile Include="celsus\stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
@@ -115,12 +118,15 @@
     <ClInclude Include="celsus\D3D11Descriptions.hpp" />
     <ClInclude Include="celsus\DX10Utils.hpp" />
     <ClInclude Include="celsus\DX11Utils.hpp" />
+    <ClInclude Include="celsus\effect_wrapper.hpp" />
     <ClInclude Include="celsus\error2.hpp" />
     <ClInclude Include="celsus\ErrorHandling.hpp" />
+    <ClInclude Include="celsus\graphics.hpp" />
     <ClInclude Include="celsus\Logger.hpp" />
     <ClInclude Include="celsus\MemoryMappedFile.hpp" />
     <ClInclude Include="celsus\path_utils.hpp" />
     <ClInclude Include="celsus\Profiler.hpp" />
+    <ClInclude Include="celsus\section_reader.hpp" />
     <ClInclude Include="celsus\stdafx.h" />
     <ClInclude Include="celsus\string_utils.hpp" />
     <ClInclude Include="celsus\StringId.hpp" />
