--- a/celsus.vcxproj.filters
+++ b/celsus.vcxproj.filters
@@ -66,6 +66,9 @@
     <ClCompile Include="celsus\section_reader.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="celsus\text_scanner.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="celsus\celsus.hpp">
@@ -141,6 +144,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="celsus\section_reader.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="celsus\text_scanner.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
