--- a/celsus.vcxproj.filters
+++ b/celsus.vcxproj.filters
@@ -149,5 +149,8 @@
     <ClInclude Include="celsus\text_scanner.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="celsus\math_utils.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
