--- a/celsus.vcxproj.filters
+++ b/celsus.vcxproj.filters
@@ -75,6 +75,9 @@
     <ClCompile Include="celsus\file_watcher.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="celsus\math_utils.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="celsus\celsus.hpp">
